use plain partition for the installation

--- a/fedora-29/anaconda-ks.cfg
+++ b/fedora-29/anaconda-ks.cfg
@@ -2,7 +2,9 @@
 ignoredisk --only-use=sda
 # System bootloader configuration
 bootloader --location=mbr --boot-drive=sda
-autopart --type=lvm
+autopart --type=plain
+# Partition clearing information
+clearpart --all --initlabel --drives=sda
 # Use text mode install
 text
 # Use network installation
