--- a/fedora-29/anaconda-ks.cfg
+++ b/fedora-29/anaconda-ks.cfg
@@ -31,7 +31,6 @@ timezone America/New_York --isUtc
 
 %packages
 @^server-product-environment
-@virtualization
 @web-server
 
 %end
@@ -45,3 +44,5 @@ pwpolicy root --minlen=6 --minquality=1 --notstrict --nochanges --notempty
 pwpolicy user --minlen=6 --minquality=1 --notstrict --nochanges --emptyok
 pwpolicy luks --minlen=6 --minquality=1 --notstrict --nochanges --notempty
 %end
+
+reboot
